--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -10,7 +10,7 @@ FAQScreen As screen:
         LayoutOverflowY: =LayoutOverflow.Scroll
         PaddingLeft: =10
         PaddingRight: =10
-        Width: =375
+        Width: =Parent.Width
         ZIndex: =1
 
         ctnHeaderCS_2 As groupContainer.horizontalAutoLayoutContainer:
