--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -120,6 +120,11 @@ App As appinfo:
                 Title: "Support",
                 icon: Icon.Support//,
         //Navigate: SubmittedLeadsScreen
+            },
+            {
+                Title: "FAQ",
+                icon: Icon.QuestionMark,
+                Navigate: FAQScreen
             }
         );
         
