--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -1,4 +1,6 @@
 FAQScreen As screen:
+    OnVisible: |-
+        =ClearCollect(FAQ,{Question :"what is lead generation ?" ,Answer:" Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them. "},{Question :"what if  i already have a target list?" ,Answer:" Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them. " })
 
     ctnMainCS_2 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
@@ -155,6 +157,40 @@ FAQScreen As screen:
             Width: =Parent.Width-20
             Y: =180
             ZIndex: =3
+
+            "Gallery1 As gallery.'BrowseLayout_Flexible_SocialFeed_ver5.0'":
+                DelayItemLoading: =true
+                Height: =Parent.Height
+                Items: =FAQ
+                Layout: =Layout.Vertical
+                LoadingSpinner: =LoadingSpinner.Data
+                TemplatePadding: =4
+                TemplateSize: =Min(870, Self.Height - 60)
+                Width: =Parent.Width
+                Y: =20
+                ZIndex: =1
+
+                Title1 As label:
+                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    Height: =Self.Size * 1.8
+                    OnSelect: =Select(Parent)
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    Text: =ThisItem.Answer
+                    VerticalAlign: =VerticalAlign.Top
+                    Width: =Parent.TemplateWidth - 112
+                    X: =96
+                    Y: =ProfileImage1.Y + (ProfileImage1.Height / 2) - (Self.Height / 2)
+                    ZIndex: =2
+
+                Button3 As button:
+                    OnSelect: =Select(Parent)
+                    Text: ="Button"
+                    X: =40
+                    Y: =40
+                    ZIndex: =3
 
     grpMenuCS_2 As group:
         Height: =5
