--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -168,10 +168,11 @@ FAQScreen As screen:
                 TemplatePadding: =4
                 TemplateSize: =Min(870, Self.Height - 60)
                 Width: =Parent.Width
-                Y: =20
+                Y: =10
                 ZIndex: =1
 
                 Title1 As label:
+                    Align: =Align.Right
                     AutoHeight: =true
                     Font: =Font.Arial
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
@@ -184,7 +185,7 @@ FAQScreen As screen:
                     Text: =ThisItem.Answer
                     VerticalAlign: =VerticalAlign.Top
                     Visible: =ThisItem.IsSelected && VarAnswerFAQ 
-                    Width: =Parent.TemplateWidth - 112
+                    Width: =Parent.TemplateWidth - 20
                     X: =5
                     Y: =Button3.Height+Button3.Y+10
                     ZIndex: =2
@@ -195,7 +196,7 @@ FAQScreen As screen:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
                     Font: =Font.Arial
-                    Height: =47
+                    Height: =50
                     OnSelect: =Select(Parent)
                     Text: =ThisItem.Question
                     Width: =Parent.Width-20
@@ -208,6 +209,7 @@ FAQScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =31
+                    HoverFill: =Self.Fill
                     OnSelect: |-
                         =UpdateContext({VarAnswerFAQ:true});
                     Text: ="+"
@@ -222,6 +224,7 @@ FAQScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     FontWeight: =FontWeight.Bold
                     Height: =31
+                    HoverFill: =Self.Fill
                     OnSelect: |-
                         =UpdateContext({VarAnswerFAQ:false});
                     Text: ="-"
