--- a/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
@@ -139,7 +139,7 @@ AboutScreen As screen:
                 FontWeight: =FontWeight.Bold
                 Height: =Parent.Height
                 PaddingLeft: =20
-                Size: =AllScreensCSS.RFontSize
+                Size: =AllScreensCSS.RfontsizeInput
                 Text: ="About"
                 Width: =Parent.Width
                 ZIndex: =1
