--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -1,7 +1,7 @@
 FAQScreen As screen:
     OnVisible: |-
-        =ClearCollect(FAQ,{Question :"what is lead generation ?" ,Answer:" Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them. "},{Question :"what if  i already have a target list?" ,Answer:" Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them. " });
-        UpdateContext({VarAnswerFAQ:false})
+        =ClearCollect(FAQ,{Question :"what is lead generation ?",Answer:"Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them."},{Question :"what if  i already have a target list?",Answer:"Lead generation is the process of identifying a B2B company that is interested in the product or service a company offers and engaging with them."});
+        UpdateContext({VarAnswerFAQ:false});
 
     ctnMainCS_2 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
@@ -141,7 +141,7 @@ FAQScreen As screen:
                 FontWeight: =FontWeight.Bold
                 Height: =Parent.Height
                 PaddingLeft: =20
-                Size: =AllScreensCSS.RFontSize
+                Size: =AllScreensCSS.RfontsizeInput
                 Text: ="FAQ"
                 Width: =Parent.Width
                 ZIndex: =1
@@ -172,7 +172,7 @@ FAQScreen As screen:
                 ZIndex: =1
 
                 Title1 As label:
-                    Align: =Align.Right
+                    Align: =Align.Justify
                     AutoHeight: =true
                     Font: =Font.Arial
                     FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
@@ -245,7 +245,7 @@ FAQScreen As screen:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
-            Width: =375
+            Width: =Parent.Width/4
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
@@ -260,7 +260,7 @@ FAQScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =375
+            Width: =Parent.Width/4
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
