--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -737,10 +737,7 @@ DashboardScreen As screen:
                             Height: =30
                             OnSelect: =Set(VarPopup,true)
                             PaddingTop: =0
-                            Size: |-
-                                =//19.22
-                                //If(Parent.Width<358,11,Parent.Width>358,12,14)
-                                If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                            Size: =If(Parent.Width>800,22,Parent.Width<358,14,Parent.Width>358,16)
                             Text: |-
                                 =//If user select span for yearly and yearlycapreatched is true then show $ 10000 otherwise show TotalproposedIncentives and if user select span for cumulatively, then need to show sum of TotalproposedIncentives .
                                 "Incentive  " &  Char(10) & "$ " & 
@@ -767,10 +764,7 @@ DashboardScreen As screen:
                             Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
-                            Size: |-
-                                =//19.22
-                                //If(Parent.Width<358,14,Parent.Width>358,16,18)
-                                If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                            Size: =If(Parent.Width>800,22,Parent.Width<358,14,Parent.Width>358,16)
                             Text: |-
                                 =// to show total leads yearly or cumulatively
                                 If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,0,
@@ -800,7 +794,7 @@ DashboardScreen As screen:
                             Size: |-
                                 =//19.22
                                 //If(Parent.Width>800,20,Parent.Width<358,11,Parent.Width>358,12)
-                                If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                                If(Parent.Width>800,22,Parent.Width<358,14,Parent.Width>358,16)
                             Text: |-
                                 ="Quoted Leads #"
                             Width: =Parent.Width
@@ -899,10 +893,7 @@ DashboardScreen As screen:
                             Height: =30
                             OnSelect: =Set(VarPopup,true)
                             PaddingTop: =0
-                            Size: |-
-                                =//19.22
-                                //If(Parent.Width<358,11,Parent.Width>358,12,14)
-                                If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                            Size: =If(Parent.Width>800,22,Parent.Width<358,14,Parent.Width>358,16)
                             Text: |-
                                 =//If user select span for yearly and yearlycapreatched is true then show $ 10000 otherwise show TotalsoldIncentives and if user select span for cumulatively, then need to show sum of TotalsoldIncentives .
                                 "Incentive  "   & Char(10) &  "$ " &
@@ -940,10 +931,7 @@ DashboardScreen As screen:
                             Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
-                            Size: |-
-                                =//19.22
-                                //If(Parent.Width<358,14,Parent.Width>358,16,18)
-                                If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                            Size: =If(Parent.Width>800,22,Parent.Width<358,14,Parent.Width>358,16)
                             Text: |-
                                 =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,0,
                                 If(
@@ -971,10 +959,7 @@ DashboardScreen As screen:
                             Height: =30
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
-                            Size: |-
-                                =//19.22
-                                //If(Parent.Width>800,20,Parent.Width<358,11,Parent.Width>358,12)
-                                If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                            Size: =If(Parent.Width>800,22,Parent.Width<358,14,Parent.Width>358,16)
                             Text: |-
                                 ="Sold Leads #"
                             Width: =Parent.Width
