--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -121,7 +121,7 @@ LeadListScreen As screen:
                         txtinptsearchLS As text:
                             BorderColor: =Header.SHRed
                             Default: =""
-                            HintText: ="Search on QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No."
+                            HintText: ="Search by QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No."
                             HoverBorderColor: =Header.SHRed
                             HoverFill: =RGBA(0, 0, 0, 0)
                             Width: =610
@@ -297,8 +297,8 @@ LeadListScreen As screen:
                     Color: =RGBA(116, 116, 116, 1)
                     Height: =50
                     Text: |-
-                        ="Note:1)Search on QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No.
-                                  2)Click on specific lead to see details."
+                        ="Note:1) Search by QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No.
+                                  2) Click on specific lead to see details."
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width
                     X: =10
