--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -139,7 +139,7 @@ ScopeScreen As screen:
                 PaddingRight: =20
                 PaddingTop: =0
                 Size: =If(Parent.Width<500,16,Parent.Width>500,20,18)
-                Text: ="Create new lead"
+                Text: ="Create New Lead"
                 Width: =Parent.Width
                 ZIndex: =1
 
