--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -1032,7 +1032,7 @@ CreatLeadScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width/3.2
             X: =10
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =8
@@ -1055,7 +1055,7 @@ CreatLeadScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuCLS.Width-lineIndicatorCLS.Width
-                    X: =45.83006535947712
+                    X: =iconMenuCLS.Width+iconMenuCLS.X+10
                     Y: =30
                     ZIndex: =1
 
@@ -1064,7 +1064,7 @@ CreatLeadScreen As screen:
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
-                    X: =12
+                    X: =15
                     Y: =30
                     ZIndex: =3
 
