--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -198,6 +198,7 @@ FAQScreen As screen:
                     Font: =Font.Arial
                     Height: =50
                     OnSelect: =Select(Parent)
+                    Size: =12
                     Text: =ThisItem.Question
                     Width: =Parent.Width-20
                     X: =5
