--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -703,7 +703,7 @@ UnitScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width/3.2
             X: =10
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =4
@@ -726,7 +726,7 @@ UnitScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuUS.Width-lineIndicatorUS.Width
-                    X: =iconMenuUS.Width+iconMenuUS.X
+                    X: =iconMenuUS.Width+iconMenuUS.X+10
                     Y: =30
                     ZIndex: =1
 
@@ -735,7 +735,7 @@ UnitScreen As screen:
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
-                    X: =12
+                    X: =15
                     Y: =30
                     ZIndex: =3
 
