--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -693,7 +693,7 @@ ImageUploadScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width/3.2
             X: =10
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =4
@@ -716,7 +716,7 @@ ImageUploadScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuIS.Width-lineIndicatorIS.Width
-                    X: =iconMenuIS.Width+iconMenuIS.X
+                    X: =iconMenuIS.Width+iconMenuIS.X+10
                     Y: =30
                     ZIndex: =1
 
@@ -725,7 +725,7 @@ ImageUploadScreen As screen:
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
-                    X: =12
+                    X: =15
                     Y: =30
                     ZIndex: =3
 
