--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1664,7 +1664,7 @@ LeadSummaryScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width/3.2
             X: =10
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
@@ -1687,7 +1687,7 @@ LeadSummaryScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuLSS.Width-lineIndicatorLSS.Width
-                    X: =iconMenuLSS.Width+iconMenuLSS.X
+                    X: =iconMenuLSS.Width+iconMenuLSS.X+10
                     Y: =30
                     ZIndex: =1
 
@@ -1696,7 +1696,7 @@ LeadSummaryScreen As screen:
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
-                    X: =12
+                    X: =15
                     Y: =30
                     ZIndex: =3
 
