--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -616,7 +616,7 @@ SubmittedLeadScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width/3.2
             X: =10
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
@@ -639,7 +639,7 @@ SubmittedLeadScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuSLS.Width-lineIndicatorSLS.Width
-                    X: =iconMenuSLS.Width+iconMenuSLS.X
+                    X: =iconMenuSLS.Width+iconMenuSLS.X+10
                     Y: =30
                     ZIndex: =1
 
@@ -648,7 +648,7 @@ SubmittedLeadScreen As screen:
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
-                    X: =12
+                    X: =15
                     Y: =30
                     ZIndex: =3
 
