--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -261,7 +261,7 @@ FAQScreen As screen:
             TemplatePadding: =0
             TemplateSize: =90
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width/3.2
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
@@ -283,7 +283,7 @@ FAQScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuCS_2.Width-lineIndicatorCS_2.Width
-                    X: =iconMenuCS_2.Width+iconMenuCS_2.X
+                    X: =iconMenuCS_2.Width+iconMenuCS_2.X+10
                     Y: =30
                     ZIndex: =1
 
@@ -292,7 +292,7 @@ FAQScreen As screen:
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
-                    X: =12
+                    X: =15
                     Y: =30
                     ZIndex: =3
 
